--- a/Lucke/diary/templates/diary/home.html
+++ b/Lucke/diary/templates/diary/home.html
@@ -1,23 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>My Diary</title>
-</head>
-<body>
-    <h1>Welcome to Your Diary</h1>
-    {% if user.is_authenticated %}
-        <a href="{% url 'create_post' %}">Create New Post</a>
-        <ul>
-            {% for post in posts %}
-                <li>
-                    <h2>{{ post.title }}</h2>
-                    <p>{{ post.content }}</p>
-                    <p>Written on {{ post.created_at }}</p>
-                </li>
-            {% endfor %}
-        </ul>
-    {% else %}
-        <p>You are not logged in. Please <a href="{% url 'account_login' %}">log in</a> to see your posts.</p>
-    {% endif %}
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}Home - Lucke Project{% endblock %}
+
+{% block content %}
+<div class="jumbotron">
+    <h1 class="display-4">Welcome to Lucke Project</h1>
+    <p class="lead">This is a simple diary application where you can log your daily posts.</p>
+    <hr class="my-4">
+    <p>Sign up to start logging your posts or log in if you already have an account.</p>
+    <a class="btn btn-primary btn-lg" href="{% url 'account_signup' %}" role="button">Sign Up</a>
+    <a class="btn btn-secondary btn-lg" href="{% url 'account_login' %}" role="button">Login</a>
+</div>
+{% endblock %}
