--- a/Lucke/templates/account/login.html
+++ b/Lucke/templates/account/login.html
@@ -10,5 +10,6 @@
         {{ form.as_p }}
         <button type="submit" class="btn btn-primary btn-block">Login</button>
     </form>
+    <p class="text-center">Don't have an account? <a href="{% url 'account_signup' %}">Sign Up</a></p>
 </div>
 {% endblock %}
