--- a/Lucke/templates/profile.html
+++ b/Lucke/templates/profile.html
@@ -7,4 +7,20 @@
     <h2 class="text-center">Welcome, {{ user.username }}!</h2>
     <p>This is your profile page.</p>
 </div>
+
+<h1>Welcome to Your Diary</h1>
+{% if user.is_authenticated %}
+    <a href="{% url 'create_post' %}">Create New Post</a>
+    <ul>
+        {% for post in posts %}
+            <li>
+                <h2>{{ post.title }}</h2>
+                <p>{{ post.content }}</p>
+                <p>Written on {{ post.created_at }}</p>
+            </li>
+        {% endfor %}
+    </ul>
+{% else %}
+    <p>You are not logged in. Please <a href="{% url 'account_login' %}">log in</a> to see your posts.</p>
+{% endif %}
 {% endblock %}
