--- a/Lucke/templates/profile.html
+++ b/Lucke/templates/profile.html
@@ -8,19 +8,22 @@
     <p>This is your profile page.</p>
 </div>
 
-<h1>Welcome to Your Diary</h1>
 {% if user.is_authenticated %}
     <a href="{% url 'create_post' %}">Create New Post</a>
     <ul>
         {% for post in posts %}
-            <li>
-                <h2>{{ post.title }}</h2>
-                <p>{{ post.content }}</p>
-                <p>Written on {{ post.created_at }}</p>
-            </li>
-        {% endfor %}
-    </ul>
-{% else %}
+                <li class="list-group-item">
+                    <a href="{% url 'post_detail' post.id %}"><h4>{{ post.title }}</h4></a>
+                    <p>{{ post.content }}</p>
+                    <small>Posted on {{ post.created_at|date:"M d, Y" }} at {{ post.created_at|time:"H:i" }}</small>
+                    <div class="mt-2">
+                        <a href="{% url 'post_edit' post.id %}" class="btn btn-secondary btn-sm">Edit</a>
+                        <a href="{% url 'post_delete' post.id %}" class="btn btn-danger btn-sm">Delete</a>
+                    </div>
+                </li>
+            {% endfor %}
+        </ul>
+    {% else %}
     <p>You are not logged in. Please <a href="{% url 'account_login' %}">log in</a> to see your posts.</p>
 {% endif %}
 {% endblock %}
