--- a/Lucke/templates/profile_update.html
+++ b/Lucke/templates/profile_update.html
@@ -10,9 +10,13 @@
         <ul class="list-group">
             {% for post in posts %}
                 <li class="list-group-item">
-                    <h4>{{ post.title }}</h4>
+                    <a href="{% url 'post_detail' post.id %}"><h4>{{ post.title }}</h4></a>
                     <p>{{ post.content }}</p>
                     <small>Posted on {{ post.created_at|date:"M d, Y" }} at {{ post.created_at|time:"H:i" }}</small>
+                    <div class="mt-2">
+                        <a href="{% url 'post_edit' post.id %}" class="btn btn-secondary btn-sm">Edit</a>
+                        <a href="{% url 'post_delete' post.id %}" class="btn btn-danger btn-sm">Delete</a>
+                    </div>
                 </li>
             {% endfor %}
         </ul>
