--- a/Lucke/templates/profile.html
+++ b/Lucke/templates/profile.html
@@ -15,7 +15,7 @@
                 <li class="list-group-item">
                     <a href="{% url 'post_detail' post.id %}"><h4>{{ post.title }}</h4></a>
                     <p>{{ post.content }}</p>
-                    <small>Posted on {{ post.created_at|date:"M d, Y" }} at {{ post.created_at|time:"H:i" }}</small>
+                    <small>written on {{ post.created_at|date:"M d, Y" }} at {{ post.created_at |time:"H:i" }}</small>
                     <div class="mt-2">
                         <a href="{% url 'post_edit' post.id %}" class="btn btn-secondary btn-sm">Edit</a>
                         <a href="{% url 'post_delete' post.id %}" class="btn btn-danger btn-sm">Delete</a>
