--- a/Lucke/templates/profile.html
+++ b/Lucke/templates/profile.html
@@ -3,27 +3,42 @@
 {% block title %}Profile - Lucke Project{% endblock %}
 
 {% block content %}
-<div class="profile-container">
-    <h2 class="text-center">Welcome, {{ user.username }}!</h2>
-    <p>This is your profile page.</p>
-</div>
+<div class="container mt-4">
+    <h2>{{ user.username }}'s Profile</h2>
+    <p>Email: {{ user.email }}</p>
+    <p>Joined: {{ user.date_joined|date:"F j, Y" }}</p>
 
-{% if user.is_authenticated %}
-    <a href="{% url 'create_post' %}">Create New Post</a>
-    <ul>
+    <hr>
+
+    <h3>My Diary Timeline</h3>
+    <div class="timeline">
         {% for post in posts %}
-                <li class="list-group-item">
-                    <a href="{% url 'post_detail' post.id %}"><h4>{{ post.title }}</h4></a>
-                    <p>{{ post.content }}</p>
-                    <small>written on {{ post.created_at|date:"M d, Y" }} at {{ post.created_at |time:"H:i" }}</small>
-                    <div class="mt-2">
-                        <a href="{% url 'post_edit' post.id %}" class="btn btn-secondary btn-sm">Edit</a>
-                        <a href="{% url 'post_delete' post.id %}" class="btn btn-danger btn-sm">Delete</a>
-                    </div>
-                </li>
-            {% endfor %}
-        </ul>
-    {% else %}
-    <p>You are not logged in. Please <a href="{% url 'account_login' %}">log in</a> to see your posts.</p>
-{% endif %}
+            <div class="timeline-item">
+                <div class="timeline-date">{{ post.created_at|date:"F j, Y" }}</div>
+                <h4>{{ post.title }}</h4>
+                <p>{{ post.content|truncatewords:30 }}</p>
+                <a href="{% url 'post_detail' post.id %}" class="btn btn-secondary btn-sm">Read more</a>
+                <a href="{% url 'post_edit' post.id %}" class="btn btn-warning btn-sm">Edit</a>
+                <a href="{% url 'post_delete' post.id %}" class="btn btn-danger btn-sm">Delete</a>
+                <hr>
+            </div>
+        {% empty %}
+            <p>You have no diary entries yet.</p>
+        {% endfor %}
+    </div>
+</div>
+<style>
+    .timeline {
+        border-left: 3px solid #ddd;
+        margin-left: 20px;
+        padding-left: 20px;
+    }
+    .timeline-item {
+        margin-bottom: 20px;
+    }
+    .timeline-date {
+        font-weight: bold;
+        color: #555;
+    }
+</style>
 {% endblock %}
