--- a/Lucke/templates/profile.html
+++ b/Lucke/templates/profile.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="container mt-4">
-    <h2>{{ user.username }}'s Profile</h2>
+    <h2>{{ user.username|title }}'s Profile</h2>
     <p>Email: {{ user.email }}</p>
     <p>Joined: {{ user.date_joined|date:"F j, Y" }}</p>
 
@@ -27,18 +27,5 @@
         {% endfor %}
     </div>
 </div>
-<style>
-    .timeline {
-        border-left: 3px solid #ddd;
-        margin-left: 20px;
-        padding-left: 20px;
-    }
-    .timeline-item {
-        margin-bottom: 20px;
-    }
-    .timeline-date {
-        font-weight: bold;
-        color: #555;
-    }
-</style>
+
 {% endblock %}
