--- a/Lucke/templates/profile.html
+++ b/Lucke/templates/profile.html
@@ -10,6 +10,8 @@
 
     <hr>
 
+    {% if user.is_authenticated %}
+    <a href="{% url 'create_post' %}">Create New Post</a>
     <h3>My Diary Timeline</h3>
     <div class="timeline">
         {% for post in posts %}
@@ -27,5 +29,5 @@
         {% endfor %}
     </div>
 </div>
-
+{% endif %}
 {% endblock %}
