--- a/lucke/templates/post_detail.html
+++ b/lucke/templates/post_detail.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="post-detail-container">
-    <h2>{{ post.title }}</h2>
+    <h2>{{ post.title|title }}</h2>
     <p>{{ post.content }}</p>
     <small>Posted on {{ post.created_at|date:"M d, Y" }} at {{ post.created_at|time:"H:i" }}</small>
     <div class="mt-2">
