--- a/lucke/templates/base.html
+++ b/lucke/templates/base.html
@@ -22,7 +22,7 @@
                         <a class="nav-link" href="{% url 'profile' %}">Profile</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'create_post' %}">Create Post</a>
+                        <a class="nav-link" href="{% url 'create_diary' %}">Create Post</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout_confirmation' %}">Logout</a>
