--- a/lucke/templates/create_diary.html
+++ b/lucke/templates/create_diary.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="create-post-container">
-    <h2 class="text-center">Create a New Post</h2>
+    <h2 class="text-center">Create a Diary Entry</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
