--- a/lucke/templates/profile.html
+++ b/lucke/templates/profile.html
@@ -11,17 +11,17 @@
     <hr>
 
     {% if user.is_authenticated %}
-    <a href="{% url 'create_post' %}">Create New Post</a>
+    <a href="{% url 'create_diary' %}">Create New Post</a>
     <h3>My Diary Timeline</h3>
     <div class="timeline">
-        {% for post in posts %}
+        {% for diary in diaries %}
             <div class="timeline-item">
-                <div class="timeline-date">{{ post.created_at|date:"F j, Y" }}</div>
-                <h4>{{ post.title|title }}</h4>
-                <p>{{ post.content|truncatewords:30 }}</p>
-                <a href="{% url 'post_detail' post.id %}" class="btn btn-secondary btn-sm">Read more</a>
-                <a href="{% url 'post_edit' post.id %}" class="btn btn-warning btn-sm">Edit</a>
-                <a href="{% url 'post_delete' post.id %}" class="btn btn-danger btn-sm">Delete</a>
+                <div class="timeline-date">{{ diary.created_at|date:"F j, Y" }}</div>
+                <h4>{{ diary.title|title }}</h4>
+                <p>{{ diary.content|truncatewords:30 }}</p>
+                <a href="{% url 'diary_detail' diary.id %}" class="btn btn-secondary btn-sm">Read more</a>
+                <a href="{% url 'diary_edit' diary.id %}" class="btn btn-warning btn-sm">Edit</a>
+                <a href="{% url 'diary_delete' diary.id %}" class="btn btn-danger btn-sm">Delete</a>
                 <hr>
             </div>
         {% empty %}
