--- a/lucke/templates/create_diary.html
+++ b/lucke/templates/create_diary.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 
-{% block title %}Create Post - Lucke Project{% endblock %}
+{% block title %}Write a Diary - Lucke Project{% endblock %}
 
 {% block content %}
 <div class="create-post-container">
-    <h2 class="text-center">Create a Diary Entry</h2>
+    <h2 class="text-center">Write a Diary</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-primary btn-block">Create Post</button>
+        <button type="submit" class="btn btn-primary btn-block">Dangle It</button>
     </form>
 </div>
 {% endblock %}
