--- a/lucke/templates/profile.html
+++ b/lucke/templates/profile.html
@@ -11,7 +11,7 @@
     <hr>
 
     {% if user.is_authenticated %}
-    <a href="{% url 'create_diary' %}">Create New Post</a>
+    <a href="{% url 'create_diary' %}">Write a Diary</a>
     <h3>My Diary Timeline</h3>
     <div class="timeline">
         {% for diary in diaries %}
