Fixing a text issue in the html

--- a/lucke/templates/diary_delete.html
+++ b/lucke/templates/diary_delete.html
@@ -12,5 +12,5 @@
         <button type="submit" class="btn btn-danger">Yes, delete</button>
         <a href="{% url 'diary_detail' diary.id %}" class="btn btn-secondary">Cancel</a>
     </form>
-</div>diary
+</div>
 {% endblock %}
