--- a/lucke/templates/base.html
+++ b/lucke/templates/base.html
@@ -27,12 +27,18 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout_confirmation' %}">Logout</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'about' %}">About</a>
+                    </li>
                 {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'account_login' %}">Login</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'about' %}">About</a>
                     </li>
                 {% endif %}
             </ul>
