fixing pages head titles

--- a/lucke/templates/account/logout.html
+++ b/lucke/templates/account/logout.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Logout - Lucke Project{% endblock %}
+{% block title %}Logout{% endblock %}
 
 {% block content %}
 <div class="logout-container">
