--- a/lucke/templates/account/logout_confirmation.html
+++ b/lucke/templates/account/logout_confirmation.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Logout Confirmation - Lucke Project{% endblock %}
+{% block title %}Logout Confirmation{% endblock %}
 
 {% block content %}
 <div class="logout-confirmation-container">
