--- a/lucke/templates/create_diary.html
+++ b/lucke/templates/create_diary.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Write a Diary - Lucke Project{% endblock %}
+{% block title %}Write a Diary{% endblock %}
 
 {% block content %}
 <div class="create-post-container">
