--- a/lucke/templates/diary_edit.html
+++ b/lucke/templates/diary_edit.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Edit diary - Lucke Project{% endblock %}
+{% block title %}Edit diary{% endblock %}
 diary
 {% block content %}
 <div class="post-edit-container">
