--- a/lucke/templates/account/signup.html
+++ b/lucke/templates/account/signup.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Sign Up - Lucke Project{% endblock %}
+{% block title %}Sign Up{% endblock %}
 
 {% block content %}
 <div class="signup-container">
