--- a/lucke/templates/diary_delete.html
+++ b/lucke/templates/diary_delete.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Delete Diary - Lucke Project{% endblock %}
+{% block title %}Delete Diary{% endblock %}
 
 {% block content %}
 <div class="post-delete-container">
