--- a/lucke/templates/diary_detail.html
+++ b/lucke/templates/diary_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ diary.title }} - Lucke Project{% endblock %}
+{% block title %}Lucke Project{% endblock %}
 
 {% block content %}
 <div class="post-detail-container">
