--- a/lucke/static/css/styles.css
+++ b/lucke/static/css/styles.css
@@ -21,3 +21,20 @@ body {
 .navbar {
   margin-bottom: 20px;
 }
+
+.sidenote {
+  border-left: 3px solid #007bff;
+  padding-left: 10px;
+  margin-bottom: 10px;
+  background-color: #f8f9fa;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+#sidenoteFormContainer {
+  margin-top: 15px;
+}
+
+#showSidenoteForm {
+  margin-bottom: 10px;
+}
