--- a/lucke/diary/templates/diary/home.html
+++ b/lucke/diary/templates/diary/home.html
@@ -8,7 +8,7 @@
     <p class="lead">This is a simple diary application where you can log your daily posts.</p>
     <hr class="my-4">
     <p>Sign up to start logging your posts or log in if you already have an account.</p>
-    <a class="btn btn-primary btn-lg" href="{% url 'account_signup' %}" role="button">Sign Up</a>
-    <a class="btn btn-secondary btn-lg" href="{% url 'account_login' %}" role="button">Login</a>
+    <a class="btn btn-success" href="{% url 'account_signup' %}" role="button">Sign Up</a>
+    <a class="btn btn-dark " href="{% url 'account_login' %}" role="button">Login</a>
 </div>
 {% endblock %}
