--- a/lucke/templates/account/login.html
+++ b/lucke/templates/account/login.html
@@ -2,16 +2,17 @@
 
 {% load crispy_forms_tags %}
 
-{% block title %}Login{% endblock %}
+{% block title %}Login b{% endblock %}
 
 {% block content %}
-<div class="login-container">
+<div class="jumbotron">
     <h2 class="text-center">Login</h2>
     <form method="post" action="{% url 'account_login' %}">
         {% csrf_token %}
         {{ form|crispy }}
-        <button type="submit" class="btn btn-primary btn-block">Login</button>
+        <button type="submit" class="btn btn btn-dark btn-block">Login</button>
     </form>
-    <p class="text-center">Don't have an account? <a href="{% url 'account_signup' %}">Sign Up</a></p>
+    <br>
+    <p class="text-center">Don't have an account? <a class="link-dark" href="{% url 'account_signup' %}">Sign Up</a></p>
 </div>
 {% endblock %}
