--- a/lucke/templates/account/signup.html
+++ b/lucke/templates/account/signup.html
@@ -5,12 +5,12 @@
 {% block title %}Sign Up{% endblock %}
 
 {% block content %}
-<div class="signup-container">
+<div class="jumbotron">
     <h2 class="text-center">Sign Up</h2>
     <form method="post" action="{% url 'account_signup' %}">
         {% csrf_token %}
         {{ form|crispy }}
-        <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
+        <button type="submit" class="btn btn-success btn-block">Sign Up</button>
     </form>
 </div>
 {% endblock %}
