--- a/lucke/templates/base.html
+++ b/lucke/templates/base.html
@@ -44,6 +44,9 @@
     <div class="container mt-4">
         {% block content %}{% endblock %}
     </div>
+    <footer>
+        
+    </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
