--- a/lucke/templates/base.html
+++ b/lucke/templates/base.html
@@ -11,7 +11,8 @@
     </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{% url 'profile' %}">Lucke Project</a>
+        <a class="navbar-brand" {% if user.is_authenticated %}
+         href="{% url 'profile' %}" {% else %} href="{% url 'home' %}" {% endif %}>Lucke Project</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -45,7 +46,7 @@
         {% block content %}{% endblock %}
     </div>
     <footer>
-        
+
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
