--- a/lucke/diary/templates/registration/login.html
+++ b/lucke/diary/templates/registration/login.html
@@ -13,6 +13,6 @@
         <button type="submit" class="btn btn btn-dark btn-block">Login</button>
     </form>
     <br>
-    <p class="text-center">Don't have an account? <a class="link-dark" href="{% url 'account_signup' %}">Sign Up</a></p>
+    <p class="text-center">Don't have an account? <a class="link-dark text-reset" href="{% url 'account_signup' %}">Sign Up</a></p>
 </div>
 {% endblock %}
