--- a/lucke/templates/account/logout_confirmation.html
+++ b/lucke/templates/account/logout_confirmation.html
@@ -7,8 +7,8 @@
     <h2 class="text-center">Are you sure you want to logout?</h2>
     <form method="post" action="{% url 'account_logout' %}">
         {% csrf_token %}
-        <button type="submit" class="btn btn-primary">Yes, Logout</button>
-        <a href="{% url 'profile' %}" class="btn btn-secondary">Cancel</a>
+        <button type="submit" class="btn btn-dark">Yes, Logout</button>
+        <a href="{% url 'profile' %}" class="btn btn-light">Cancel</a>
     </form>
 </div>
 {% endblock %}
