--- a/lucke/templates/about.html
+++ b/lucke/templates/about.html
@@ -3,8 +3,9 @@
 {% block title %}About{% endblock %}
 {% block content %}
     <main>
-        <section>
+        <section class="about">
             <h1>About Lucke Project</h1>
+            <br>
             <p>
                 The Lucke project is like a digital diary that allows users to create a profile,Login, and write diaries and write about their daily experiences.
                 Inspired by the philosopher <i><b>John Locke</b></i>, who  valued  the importance of memories, this project aims to provide a personal space for users to store and reflect on their thoughts and experiences.
