--- a/lucke/templates/create_diary.html
+++ b/lucke/templates/create_diary.html
@@ -8,7 +8,7 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-primary btn-block">Dangle It on the Timeline</button>
+        <button type="submit" class="btn btn-dark btn-block">Save It to the Timeline</button>
     </form>
 </div>
 {% endblock %}
