--- a/lucke/templates/profile.html
+++ b/lucke/templates/profile.html
@@ -13,7 +13,7 @@
     <br>
 
     {% if user.is_authenticated %}
-    <a href="{% url 'create_diary' %}" class="btn btn-dark btn-block">Write a New Diary</a>
+    <a href="{% url 'create_diary' %}" class="btn btn-light btn-block">Write a New Diary</a>
     <br>
     <div class="timeline">
         {% for diary in diaries %}
