--- a/lucke/static/css/styles.css
+++ b/lucke/static/css/styles.css
@@ -94,3 +94,7 @@ background-color: rgb(12, 12, 12);
   background-color: #16161633;
   color: #e0e0e0;
 }
+
+.text-center-light {
+  color: #e0e0e0b4;
+}
