--- a/lucke/templates/sidenotes_list.html
+++ b/lucke/templates/sidenotes_list.html
@@ -2,7 +2,7 @@
     {% for sidenote in sidenotes %}
         <div class="sidenote">
             <p>{{ sidenote.content }}</p>
-            <small>Written on {{ sidenote.created_at|date:"M d, Y" }} at {{ sidenote.created_at|time:"H:i" }}</small>
+            <small class="timeDate">Written on {{ sidenote.created_at|date:"M d, Y" }} at {{ sidenote.created_at|time:"H:i" }}</small>
         </div>
     {% endfor %}
 </div>
