--- a/lucke/templates/account/logout_confirmation.html
+++ b/lucke/templates/account/logout_confirmation.html
@@ -4,7 +4,8 @@
 
 {% block content %}
 <div class="logout-confirmation-container">
-    <h2 class="text-center">Are you sure you want to logout?</h2>
+    <h2 class="text-center-light">Are you sure you want to logout?</h2>
+    <br>
     <form method="post" action="{% url 'account_logout' %}">
         {% csrf_token %}
         <button type="submit" class="btn btn-dark">Yes, Logout</button>
