--- a/lucke/templates/diary_delete.html
+++ b/lucke/templates/diary_delete.html
@@ -3,7 +3,7 @@
 {% block title %}Delete Diary{% endblock %}
 
 {% block content %}
-<div class="post-delete-container">
+<div class="post-delete-container text-center-light">
     <h2>Delete Diary</h2>
     <p>Are you sure you want to delete this diary?</p>
     <p><strong>{{ diary.title }}</strong></p>
