Add meta info to Html base

--- a/lucke/templates/base.html
+++ b/lucke/templates/base.html
@@ -5,6 +5,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="diaries blog">
+        <meta name="keywords" content="diary,diaries,blog, lucke, john lucke, memoreis">
+        <meta name="author" content="Tariq Safieh">
         <title>{% block title %}Lucke Project{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="{% static 'css/styles.css' %}">
