--- a/lucke/static/css/styles.css
+++ b/lucke/static/css/styles.css
@@ -98,3 +98,19 @@ background-color: rgb(12, 12, 12);
 .text-center-light {
    text-shadow: #e0e0e0 1px 1px 50px;
 }
+
+.mastfoot {
+  color: #e0e0e05e;
+  margin-top: auto;
+  text-align: center;
+}
+
+.mastfoot a {
+  color: #e0e0e05e;
+  text-decoration: none;
+}
+
+.mastfoot a:hover {
+  color: #e0e0e07e;
+  text-decoration:underline;
+}
