--- a/lucke/templates/base.html
+++ b/lucke/templates/base.html
@@ -48,8 +48,13 @@
     <div class="container mt-4">
         {% block content %}{% endblock %}
     </div>
-    <footer>
-
+    <footer class="mastfoot fixed-bottom">
+        <div class="inner">
+            <p>LUCKE, Project By    
+            <a href="https://www.linkedin.com/in/tariq-safieh-7b1b3b1a4/" target="_blank">Tariq Safieh</a>
+            &copy; 2024
+            </p>
+        </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
